# support-chatbot

./: .dockerignore  .editorconfig  .gitignore  Dockerfile  README.md  docker-compose.yml  example.env  main.py  pyproject.toml
.deepeval/: .deepeval_telemetry.txt
.github/: copilot-instructions.md
.github/workflows/: ci.yml  deploy-dev.yml  deploy-prod.yml  docker-build-deploy.yml  ingest-manuals.yml  rag-evals.yml
config/: support-chatbot-prompt.txt
interface/: app.py
src/support_chatbot/: __init__.py  main.py  settings.py
src/support_chatbot/adapters/: __init__.py  conversation_engine.py  document_loader.py  prompt_provider.py  vector_store.py
src/support_chatbot/api/: __init__.py  app.py  dependencies.py  errors.py  log.py  middleware.py  routes.py  schemas.py
src/support_chatbot/config/: __init__.py  manuals.py  manuals.yaml
src/support_chatbot/domain/: __init__.py  errors.py  models.py  ports.py
src/support_chatbot/prompts/: citation_prompt.md  support_chatbot_prompt.md
src/support_chatbot/services/: __init__.py  chat_service.py  manual_ingestion_service.py  vector_store_service.py
tests/: conftest.py
tests/adapters/: test_conversation_engine.py  test_document_loader.py  test_vector_store.py
tests/api/: test_routes.py
tests/integration/: conftest.py  golden_questions.py  golden_questions.yaml  test_rag_quality.py
tests/services/: test_boilerplate.py
